chore: more build refactorings